--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,8 @@ img{
   box-shadow: 0 3px 10px rgba(0,0,0,0.2);
   color: #fff;
   height: 70px;
-  position: relative;
+  position: fixed;
+  width: 100%;
   z-index: 100;
 }
 
@@ -83,6 +84,13 @@ img{
 
 .navbar a:hover{
   border-bottom: 2px solid #fff;
+}
+
+nav #icon{
+  color:var(--primary-color);
+  font-weight: 3rem;
+  cursor: pointer;
+  display: none;
 }
 /*
 *****************************
@@ -470,22 +478,50 @@ img{
      margin-top: 0;
   }
 
+  .navbar ul{
+    flex-direction: column;
+  }
+
+  nav #icon{
+    display: block;
+    color: #fff;
+  }
+
+  .navbar ul{   
+  position: fixed;
+  width: 100%;
+  height: 22vh;
+  background: var(--deep-gray);
+  top: 70px;
+  left: -100%;
+  text-align: justify;
+  transition: all .5s;
+  }
+
+  .navbar ul.show{
+    left: 0;
+  }
+  .navbar li{
+    margin: 5px 0;
+  }
+  .navbar a{
+    padding: 5px;
+  }
   .showcase .showcase-button a{
     display: block;
     width: auto;
     margin: 20px 0;
     text-align: center;
   }
-
-  .navbar{
-    height: 90px;
+  .about .grid p{
+  margin-left: 0px;
+  text-align: justify;
+}
+  .about .about-contacts i{
+    margin-left: 0px;
+    padding-right: 10px;
   }
-
-  .navbar .flex{
-    flex-direction: column;
-  }
-
-  .navbar ul{
-    padding: 10px;
+  .about .grid {
+    margin: 10px;
   }
 }
