--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ nav #icon{
   cursor: pointer;
   display: none;
 }
+
 /*
 *****************************
 * =Navigation Endss
@@ -104,8 +105,8 @@ nav #icon{
 *****************************
 */
 .showcase{
-  height: 500px;
-  padding-top:130px;
+  height: 650px;
+  padding:230px 0 40px 0;
   background-color:var(--primary-color);
   overflow: visible;
   position: relative;
@@ -113,7 +114,6 @@ nav #icon{
 
 .showcase .container{
   max-width: 850px;
-  padding-bottom: 100px;
   margin: auto;
 }
 .showcase .showcase-button{
@@ -130,21 +130,8 @@ nav #icon{
   font-weight: bold; 
 }
 
-/*.showcase::before, .showcase::after{
-  content:'';
-  position: absolute;
-  height: 100px;
-  bottom: -65px;
-  right: 0;
-  left: 0;
-  background: var(--primary-color);
-  transform: skewY(-2.6deg);
-  -webkit-transform: skewY(-2.6deg);
-  -moz-transform: skewY(-2.6deg);
-  -ms-transform: skewY(-2.6deg);
-}*/
 
-.showcase:before{
+/*.showcase:before{
   content:'';
   position: absolute;
   bottom: 0;
@@ -156,7 +143,7 @@ nav #icon{
   -webkit-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
   -moz-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
   -ms-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
-}
+}*/
 /*
 *****************************
 * =Showcase Ends
@@ -169,7 +156,7 @@ nav #icon{
 *****************************
 */
 .skills{
-  padding: 90px 0 120px 0;
+  padding: 90px 0;
   position: relative;
 }
 
@@ -193,7 +180,7 @@ nav #icon{
   transform: scale(1.5);
 }
 
-.skills:before{
+/*.skills:before{
   content:'';
   position: absolute;
   bottom: 0;
@@ -205,7 +192,7 @@ nav #icon{
   -webkit-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
   -moz-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
   -ms-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
-}
+}*/
 /*
 *****************************
 * =Skils Ends
@@ -427,8 +414,6 @@ nav #icon{
   .footer .grid .about .grid{
     grid-template-columns: 1fr;
   }
-  .showcase .container{
-    padding-bottom: 80px;}
 
   .showcase{
     height: auto;
@@ -490,7 +475,7 @@ nav #icon{
   .navbar ul{   
   position: fixed;
   width: 100%;
-  height: 22vh;
+  height: 25vh;
   background: var(--deep-gray);
   top: 70px;
   left: -100%;
