--- a/css/styles.css
+++ b/css/styles.css
@@ -476,8 +476,8 @@ nav #icon{
   position: fixed;
   width: 100%;
   height: 25vh;
-  background: var(--deep-gray);
-  top: 70px;
+  background: var(--primary-color);
+  top: 74px;
   left: -100%;
   text-align: justify;
   transition: all .5s;
